[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0", "setuptools_scm[toml]>=7.1"]

[project]
authors = [{"name" = "Expr Team"}]
description = "Expr Lang"
dynamic = ["version"]
license = {"file" = "LICENSE"}
name = "expr-lang"
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
  "pydantic~=2.0",
  "pydantic-settings"
]

[project.optional-dependencies]
dev = [
  "build",
  "dapperdata",
  "glom",
  "mypy",
  "pytest",
  "pytest-cov",
  "pytest-pretty",
  "ruamel.yaml",
  "ruff",
  "toml-sort",
  "uv"
]

[tool.coverage.run]
omit = [
  "./expr-lang/_version.py",
  "./expr-lang/__init__.py"
]

[tool.ruff]
exclude = [".venv", "./expr-lang/_version.py"]
line-length = 120

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.package-data]
expr-lang = ["py.typed"]

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]
fallback_version = "0.0.0-dev"
write_to = "expr-lang/_version.py"
